Fix CORS by replacing CorsFilter with CorsConfigurationSource bean